--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
                     android:id="@+id/prgss_photo"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     android:layout_height="wrap_content" />
 
                 <Button
@@ -146,7 +146,7 @@
 
                 <ProgressBar
                     android:id="@+id/prgss_Review"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -183,7 +183,7 @@
                     android:id="@+id/prgss_Book"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     android:layout_height="wrap_content" />
 
                 <Button
@@ -217,7 +217,7 @@
                 <ProgressBar
                     android:id="@+id/prgss_CD"
                     style="?android:attr/progressBarStyle"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <Button
