--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,244 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relative"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.app.mohamedgomaa.arabic_books.MainActivity">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-
-                <EditText
-                    android:id="@+id/edPrice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:layout_gravity="left"
-                    android:layout_marginEnd="20sp"
-                    android:hint="@string/price"
-                    android:inputType="numberDecimal" />
-
-                <EditText
-                    android:id="@+id/edID"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:gravity="right"
-                    android:hint="@string/id"
-                    android:inputType="number" />
-            </TableRow>
-                <EditText
-                    android:id="@+id/editTitle_ar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:hint="عنوان الكتاب بالعربى"
-                    android:inputType="text"  />
-                <EditText
-                    android:id="@+id/editTitle_en"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:hint="Book Title by english"
-                    android:inputType="text"  />
-            <EditText
-                android:id="@+id/editDetails_ar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:hint=" تفاصيل الكتاب بالعربى لا تزيد عن 100 كلمة"
-                android:inputType="numberDecimal" />
-            <EditText
-                android:id="@+id/editDetails_en"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:hint="Book details by english no more than 100 word"
-                android:inputType="text"  />
-            <EditText
-                android:id="@+id/edit_autor_ar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:hint="أسم المؤلف"
-                android:inputType="text"  />
-            <EditText
-                android:id="@+id/edit_autor_en"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:hint="Author"
-                android:inputType="text" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textColor="#fd0011"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/upload_files" />
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/draw"
-                android:layout_margin="5sp"
-                >
-
-                <TextView
-                    android:id="@+id/tx_photo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_gravity="left|center"
-                    />
-
-                <ProgressBar
-                    android:id="@+id/prgss_photo"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/bt_photo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/upload_photo"
-                    android:layout_weight="1"
-                    android:onClick="Upload_photo"
-                    />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/draw"
-                android:layout_margin="5sp"
-                >
-
-                <TextView
-                    android:id="@+id/tx_Review"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_gravity="left|center"
-                    />
-
-                <ProgressBar
-                    android:id="@+id/prgss_Review"
-                    android:visibility="gone"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/bt_Review"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/upload_Review"
-                    android:layout_weight="1"
-                    android:onClick="Upload_review"
-
-                    />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/draw"
-                android:layout_margin="5sp"
-                >
-
-                <TextView
-                    android:id="@+id/tx_Book"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_gravity="left|center"
-                    />
-
-                <ProgressBar
-                    android:id="@+id/prgss_Book"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="wrap_content"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/bt_Book"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/upload_Book"
-                    android:layout_weight="1"
-                    android:onClick="Upload_book"
-
-                    />
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/draw"
-                android:layout_margin="5sp"
-                >
-
-                <TextView
-                    android:id="@+id/tx_CD"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:layout_gravity="left|center"
-                    />
-
-                <ProgressBar
-                    android:id="@+id/prgss_CD"
-                    style="?android:attr/progressBarStyle"
-                    android:visibility="gone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <Button
-                    android:id="@+id/bt_CD"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/upload_CD"
-                    android:layout_weight="1"
-                    android:onClick="Upload_CD"
-
-                    />
-            </TableRow>
-
-            <ImageView
-                android:onClick="Upload_btn"
-                android:id="@+id/imageButton"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/bt_upload"
-               />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
